[package]
name = "web3-data-collector"
authors = ["Tricster"]
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
web3 = "0.18.0"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.22"
clap = "3.2.17"